--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -8,7 +8,7 @@ on:
     paths:
      - .github/workflows/semgrep.yml
    schedule:
-   # random HH:MM to avoid a load spike on GitHub Actions at 00:00
+   # random HH:MM to avoid a load spike on GitHub Actions at 00:00 cool
    - cron: 5 2 * * *
  name: Semgrep
  jobs:
